working on overflow scroll issues in chatbar

--- a/src/react-components/room/ChatSidebar.scss
+++ b/src/react-components/room/ChatSidebar.scss
@@ -5,6 +5,12 @@
   background-color: theme.$input-bg-color;
 }
 
+:local(.overflow-div-scrolled-at-bottom) {
+  // To keep scrolled at the bottom, treat the bottom like the top
+  display: flex;
+  flex-direction: column-reverse;
+}
+
 :local(.message-list) {
   display: flex;
   flex-grow: 1;
@@ -37,6 +43,10 @@
 :local(.message-group-messages) {
   display: flex;
   flex-direction: column;
+}
+
+:local(.content) {
+  background-color: red;
 }
 
 :local(.message-bubble) {
